--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -2,7 +2,7 @@
   <main
     class="pf-v6-c-page__main pf-v6-c-page__main--with-overlay {{ if .Site.Data.effects.grid }}
       pf-v6-c-page__main--with-overlay--grid
-    {{ end }} pf-v6-x-u-blur pf-v6-x-u-transparent pf-v6-x-u-borderless {{ if or .Site.Data.effects.fireworks .Site.Data.effects.snowfall .Site.Data.effects.rainfall }}
+    {{ end }} pf-v6-x-u-blur pf-v6-x-u-transparent pf-v6-x-u-borderless {{ if or .Site.Data.effects.fireworks .Site.Data.effects.snowfall .Site.Data.effects.rainfall .Site.Data.effects.sunrays }}
       pf-v6-c-page__main--with-effects{{ if not .Site.Data.effects.blur }}
         pf-v6-c-page__main--with-effects--without-blur
       {{ end }}
