refactor: Use new icon locations for recently updated projects
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -253,7 +253,7 @@
                                   >
                                     {{ with .icon }}
                                       <img
-                                        alt="Logo"
+                                        alt="Icon"
                                         src="{{ . }}"
                                         class="pf-v6-x-c-project__icon"
                                       />
