refactor: Drop inconsistent footer styling
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,6 @@
-<div class="pf-v6-c-page__main-body pf-v6-u-px-lg pf-v6-u-px-0-on-xl pf-v6-u-py-lg">
+<div
+  class="pf-v6-c-page__main-body pf-v6-u-px-lg pf-v6-u-px-0-on-xl pf-v6-u-py-lg"
+>
   <div
     class="pf-v6-l-flex pf-m-justify-content-space-between pf-v6-x-c-footer--max-width"
   >
@@ -7,14 +9,14 @@
         href="{{ .Site.Data.site.source }}"
         target="_blank"
         rel="noopener"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration"
         >© {{ now.Year }} {{ .Site.Data.site.author }}</a
       >
     </div>
     <div class="pf-v6-l-flex__item">
       <a
         href="/imprint"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration"
         >Imprint</a
       >
     </div>
