--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,6 +18,56 @@ $pf-v6-global--image-path: "data-url:./{{ .Site.BaseURL }}/assets/images";
 $bg: "/img/bg.webp";
 
 :root {
+  --pf-x-base-color: Highlight;
+
+  --pf-t--global--color--brand--100: color-mix(
+    in srgb,
+    var(--pf-x-base-color) 80%,
+    white
+  );
+  --pf-t--global--color--brand--200: var(--pf-x-base-color);
+  --pf-t--global--color--brand--300: color-mix(
+    in srgb,
+    var(--pf-x-base-color) 80%,
+    black
+  );
+  --pf-t--global--color--severity--none--100: var(
+    --pf-t--global--color--brand--100
+  );
+  --pf-t--global--text--color--link--100: var(
+    --pf-t--global--color--brand--100
+  );
+  --pf-t--global--text--color--link--200: var(
+    --pf-t--global--color--brand--200
+  );
+  --pf-t--global--text--color--link--300: var(
+    --pf-t--global--color--brand--300
+  );
+
+  --pf-t--global--dark--color--brand--100: color-mix(
+    in srgb,
+    var(--pf-x-base-color) 80%,
+    white
+  );
+  --pf-t--global--dark--color--brand--200: var(--pf-x-base-color);
+  --pf-t--global--dark--color--brand--300: color-mix(
+    in srgb,
+    var(--pf-x-base-color) 80%,
+    black
+  );
+  --pf-t--global--dark--color--severity--none--100: var(
+    --pf-t--global--dark--color--brand--100
+  );
+  --pf-t--global--dark--text--color--link--100: var(
+    --pf-t--global--dark--color--brand--100
+  );
+  --pf-t--global--dark--text--color--link--200: var(
+    --pf-t--global--dark--color--brand--200
+  );
+  --pf-t--global--dark--text--color--link--300: var(
+    --pf-t--global--dark--color--brand--300
+  );
+
   --pf-t--global--font--family--300: redhatmonovf, redhatmono, liberationmono,
     consolas, sfmono-regular, menlo, monaco, "courier new", monospace;
   --pf-t--global--font--family--200: "Lato", redhatdisplayvf, redhatdisplay,
