feat: Add code link and basic privacy policy link for static sites
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -709,7 +709,7 @@ $bg: "/img/bg.webp";
 }
 
 .pf-v6-x-c-project__icon {
-  @extend .pf-v6-u-mr-sm;
+  @extend .pf-v6-u-mr-xs;
   max-width: 2rem;
 }
 
