--- a/layouts/index.html
+++ b/layouts/index.html
@@ -317,7 +317,7 @@
                                   class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-mb-md pf-v6-u-mb-0-on-sm"
                                 >
                                   <div
-                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-sm"
+                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-xs"
                                   >
                                     <i
                                       class="fas fa-language"
@@ -343,7 +343,7 @@
                                   class="pf-v6-u-display-flex pf-v6-u-align-items-center"
                                 >
                                   <div
-                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-sm"
+                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center "
                                   >
                                     <i
                                       class="fas fa-star"
@@ -354,7 +354,7 @@
                                     >
                                   </div>
                                   <div
-                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-sm"
+                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center "
                                   >
                                     <i
                                       class="fas fa-code-branch"
