fix: Add proper icons for footer actions
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,7 +19,7 @@
         href="{{ .Site.Data.site.source }}"
         target="_blank"
         rel="noopener"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-sm"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md"
         ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
           <span class="pf-v6-c-icon__content">
             <i class="fas fa-code" aria-hidden="true"></i>
@@ -30,10 +30,10 @@
 
       <a
         href="/privacy/static"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-sm"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md"
         ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
           <span class="pf-v6-c-icon__content">
-            <i class="fas fa-shield-halved" aria-hidden="true"></i>
+            <i class="fas fa-shield-alt" aria-hidden="true"></i>
           </span>
         </span>
         Privacy</a
@@ -41,7 +41,7 @@
 
       <a
         href="/imprint"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-sm"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration"
         ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
           <span class="pf-v6-c-icon__content">
             <i class="fas fa-gavel" aria-hidden="true"></i>
