--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,7 +18,19 @@ $pf-v6-global--image-path: "data-url:./{{ .Site.BaseURL }}/assets/images";
 $bg: "/img/bg.webp";
 
 :root {
-  --pf-x-base-color: Highlight;
+  --pf-x-base-color: #0066cc;
+  @media (prefers-color-scheme: dark) {
+    --pf-x-base-color: #92c5f9;
+  }
+
+  @supports (color: AccentColor) {
+    --pf-x-base-color: color-mix(in srgb, AccentColor 60%, black);
+  }
+  @media (prefers-color-scheme: dark) {
+    @supports (color: AccentColor) {
+      --pf-x-base-color: oklch(from AccentColor max(0.85, l) c h);
+    }
+  }
 
   --pf-t--global--color--brand--100: color-mix(
     in srgb,
@@ -31,6 +43,20 @@ $bg: "/img/bg.webp";
     var(--pf-x-base-color) 80%,
     black
   );
+  @media (prefers-color-scheme: dark) {
+    --pf-t--global--color--brand--100: color-mix(
+      in srgb,
+      var(--pf-x-base-color) 80%,
+      black
+    );
+    --pf-t--global--color--brand--200: var(--pf-x-base-color);
+    --pf-t--global--color--brand--300: color-mix(
+      in srgb,
+      var(--pf-x-base-color) 80%,
+      white
+    );
+  }
+
   --pf-t--global--color--severity--none--100: var(
     --pf-t--global--color--brand--100
   );
@@ -55,6 +81,20 @@ $bg: "/img/bg.webp";
     var(--pf-x-base-color) 80%,
     black
   );
+  @media (prefers-color-scheme: dark) {
+    --pf-t--global--dark--color--brand--100: color-mix(
+      in srgb,
+      var(--pf-x-base-color) 80%,
+      black
+    );
+    --pf-t--global--dark--color--brand--200: var(--pf-x-base-color);
+    --pf-t--global--dark--color--brand--300: color-mix(
+      in srgb,
+      var(--pf-x-base-color) 80%,
+      white
+    );
+  }
+
   --pf-t--global--dark--color--severity--none--100: var(
     --pf-t--global--dark--color--brand--100
   );
@@ -191,14 +231,14 @@ $bg: "/img/bg.webp";
   -webkit-backdrop-filter: blur(7.5px);
   background: color-mix(
     in srgb,
-    var(--pf-x-base-color) 10%,
+    var(--pf-x-base-color) 5%,
     rgba(255, 255, 255, 0.7)
   ) !important;
 
   @media (prefers-color-scheme: dark) {
     background: color-mix(
       in srgb,
-      var(--pf-x-base-color) 10%,
+      var(--pf-x-base-color) 5%,
       rgba(41, 41, 41, 0.7)
     ) !important;
   }
@@ -208,7 +248,7 @@ $bg: "/img/bg.webp";
   padding-top: 100px;
   background: color-mix(
     in srgb,
-    var(--pf-x-base-color) 10%,
+    var(--pf-x-base-color) 5%,
     rgba(255, 255, 255, 0.5)
   ) !important;
 
@@ -224,7 +264,7 @@ $bg: "/img/bg.webp";
   @media (prefers-color-scheme: dark) {
     background-color: color-mix(
       in srgb,
-      var(--pf-x-base-color) 10%,
+      var(--pf-x-base-color) 5%,
       rgba(41, 41, 41, 0.5)
     ) !important;
 
@@ -467,10 +507,10 @@ $bg: "/img/bg.webp";
 }
 
 .pf-v6-x-u-text-shadow-sm {
-  text-shadow: 0 0 4px var(--pf-t--color--white);
+  text-shadow: 0 0 8px var(--pf-t--color--white);
 
   @media (prefers-color-scheme: dark) {
-    text-shadow: 0 0 4px var(--pf-t--color--black);
+    text-shadow: 0 0 8px var(--pf-t--color--black);
   }
 }
 
@@ -567,14 +607,14 @@ $bg: "/img/bg.webp";
 
   background: color-mix(
     in srgb,
-    var(--pf-x-base-color) 10%,
+    var(--pf-x-base-color) 5%,
     rgba(255, 255, 255, 0.5)
   ) !important;
 
   @media (prefers-color-scheme: dark) {
     background: color-mix(
       in srgb,
-      var(--pf-x-base-color) 10%,
+      var(--pf-x-base-color) 5%,
       rgba(41, 41, 41, 0.5)
     ) !important;
   }
