feat: Add distinct TOS from privacy policy
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,7 +19,7 @@
         href="{{ .Site.Data.site.source }}"
         target="_blank"
         rel="noopener"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md pf-v6-x-u-nowrap"
         ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
           <span class="pf-v6-c-icon__content">
             <i class="fas fa-code" aria-hidden="true"></i>
@@ -30,7 +30,7 @@
 
       <a
         href="/privacy/static"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md pf-v6-x-u-nowrap"
         ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
           <span class="pf-v6-c-icon__content">
             <i class="fas fa-shield-alt" aria-hidden="true"></i>
@@ -40,11 +40,22 @@
       >
 
       <a
-        href="/imprint"
-        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration"
+        href="/tos/static"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-u-mr-md pf-v6-x-u-nowrap"
         ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
           <span class="pf-v6-c-icon__content">
             <i class="fas fa-gavel" aria-hidden="true"></i>
+          </span>
+        </span>
+        Terms of Service</a
+      >
+
+      <a
+        href="/imprint"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-v6-x-m-no-decoration pf-v6-x-u-nowrap"
+        ><span class="pf-v6-c-icon pf-v6-u-mr-xs">
+          <span class="pf-v6-c-icon__content">
+            <i class="fas fa-address-card" aria-hidden="true"></i>
           </span>
         </span>
         Imprint</a
