--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -14,12 +14,16 @@
     </a>
 
     <div class="lastcommit">
-      <div class="pf-v6-c-code-block pf-v6-x-u-transparent pf-v6-x-u-borderless pf-v6-u-p-sm pf-v6-u-pl-xs">
+      <div
+        class="pf-v6-c-code-block pf-v6-x-u-transparent pf-v6-x-u-borderless pf-v6-u-p-sm pf-v6-u-pl-xs"
+      >
         <div class="pf-v6-c-code-block__header">
           <div
             class="pf-v6-c-code-block__actions pf-v6-c-code-block__actions--info pf-v6-u-flex-direction-column pf-v6-u-flex-direction-row-on-lg"
           >
-            <div class="pf-v6-c-code-block__actions-item pf-v6-u-py-sm pf-v6-u-px-md">
+            <div
+              class="pf-v6-c-code-block__actions-item pf-v6-u-py-sm pf-v6-u-px-md"
+            >
               <span>Last GitHub commit by</span>
               <a class="lastcommit__user__url pf-v6-u-ml-xs" target="_blank">
                 <img id="lastcommit__user__url__img" />
@@ -41,7 +45,7 @@
         </div>
         <div class="pf-v6-c-code-block__content">
           <pre
-            class="pf-v6-c-code-block__pre pf-v6-x-u-nowrap"
+            class="pf-v6-c-code-block__pre pf-v6-x-u-nowrap pf-v6-x-u-overflow-x-auto"
           ><code class="pf-v6-c-code-block__code lastcommit__commit__message"></code></pre>
         </div>
       </div>
