refactor: Pass in username field from URL parameter, not `forges.yaml` in forges API endpoint
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -57,7 +57,7 @@
 const base = "{{ .BaseURL }}";
 
 const lastCommit = await (
-  await fetch(`${base}api/forges`)
+  await fetch(`${base}api/forges?username={{ .Username }}`)
 ).json();
 
 // Forge icon and name
