fix: Use proper padding for language field in cards
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -317,7 +317,7 @@
                                   class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-mb-md pf-v6-u-mb-0-on-sm"
                                 >
                                   <div
-                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-xs"
+                                    class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-sm"
                                   >
                                     <i
                                       class="fas fa-language"
