refactor: Use forge name for `ps-gen-projects` and in cards instead of domains
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -344,7 +344,7 @@
                                 >
                                   <div class="pf-v6-u-mb-sm">
                                     <i class="{{ .forgeIcon }}" aria-hidden="true"></i>
-                                    <span class="pf-v6-u-ml-sm">{{ .forgeDomain }}</span>
+                                    <span class="pf-v6-u-ml-sm">{{ .forgeName }}</span>
                                   </div>
                                   <div
                                     class="pf-v6-u-display-flex pf-v6-u-align-items-center"
