feat: Add loading skeleton to last commit status and make sure to only show one line of commit message
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -240,6 +240,17 @@ $bg: "/img/bg.webp";
   }
 }
 
+.lastcommit__forge__icon__skeleton {
+  width: 58px; // Rendered forge icon
+  height: 58px;
+}
+
+.lastcommit__commit__message__skeleton {
+  display: block;
+  width: 100%;
+  height: 2em;
+}
+
 .pf-v6-x-u-blur {
   backdrop-filter: blur(7.5px);
   -webkit-backdrop-filter: blur(7.5px);
